--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,17 @@
 	<script defer src="js/app.js"></script>
 </head>
 <body>
-	
+	<div class="container">
+		<div class="grid">
+			<div class="item">text</div>
+			<div class="item">text</div>
+			<div class="item">text</div>
+			<div class="item">text</div>
+			<div class="item">text</div>
+			<div class="item">text</div>
+			<div class="item">text</div>
+		</div>
+		<button>кнопка для теста</button>
+	</div>
 </body>
 </html>
