--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,18 +9,22 @@
 	<script src="https://telegram.org/js/telegram-web-app.js"></script>
 	<script defer src="js/app.js"></script>
 </head>
+
 <body>
-	<div class="container">
-		<div class="grid">
-			<div class="item">text</div>
-			<div class="item">text</div>
-			<div class="item">text</div>
-			<div class="item">text</div>
-			<div class="item">text</div>
-			<div class="item">text</div>
-			<div class="item">text</div>
+	<sectoin class="intro">
+		<div class="container">
+			<div class="intro__wrapper">
+				<button class="intro-btn">
+					<div class="intro-btn__img"><img src="img/write-icon.svg" alt=""></div>
+					<div class="intro-btn__text">Запись</div>
+				</button>
+				<button class="intro-btn">
+					<div class="intro-btn__img"><img src="img/history-icon.svg" alt=""></div>
+					<div class="intro-btn__text">История записей</div>
+				</button>
+			</div>
 		</div>
-		<button>кнопка для теста</button>
-	</div>
+	</sectoin>
 </body>
+
 </html>
