--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-	<sectoin class="intro">
+	<section class="intro">
 		<div class="container">
 			<div class="intro__wrapper">
 				<button class="intro-btn">
@@ -24,7 +24,7 @@
 				</button>
 			</div>
 		</div>
-	</sectoin>
+	</section>
 </body>
 
 </html>
