--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-	<section class="intro">
+	<section class="intro dn">
 		<div class="container">
 			<div class="intro__wrapper">
 				<button class="intro-btn">
@@ -22,6 +22,78 @@
 					<div class="intro-btn__img"><img src="img/history-icon.svg" alt=""></div>
 					<div class="intro-btn__text">История записей</div>
 				</button>
+			</div>
+		</div>
+	</section>
+	<section class="write">
+		<div class="container">
+			<div class="breadcrumbs">
+				<div class="breadcrumbs__item">
+					<a href="#">Главная</a>
+				</div>
+				<div class="breadcrumbs__item">
+					<span>Запись</span>
+				</div>
+			</div>
+			<div class="groups">
+				<div class="groups-tabs">
+					<button class="groups-tabs__btn active">Все</button>
+					<button class="groups-tabs__btn">1</button>
+					<button class="groups-tabs__btn">2</button>
+					<button class="groups-tabs__btn">3</button>
+					<button class="groups-tabs__btn">4</button>
+				</div>
+				<div class="groups__grid">
+					<div class="groups-item">
+						<div class="groups-item__title">1пк1</div>
+						<div class="groups-item__count">
+							<span class="cur">33</span> /
+							<span class="all">33</span>
+						</div>
+					</div>
+					<div class="groups-item">
+						<div class="groups-item__title">1пк1</div>
+						<div class="groups-item__count">
+							<span class="cur">33</span> /
+							<span class="all">33</span>
+						</div>
+					</div>
+					<div class="groups-item">
+						<div class="groups-item__title">1пк1</div>
+						<div class="groups-item__count">
+							<span class="cur">33</span> /
+							<span class="all">33</span>
+						</div>
+					</div>
+					<div class="groups-item">
+						<div class="groups-item__title">1пк1</div>
+						<div class="groups-item__count">
+							<span class="cur">33</span> /
+							<span class="all">33</span>
+						</div>
+					</div>
+					<div class="groups-item">
+						<div class="groups-item__title">1пк1</div>
+						<div class="groups-item__count">
+							<span class="cur">33</span> /
+							<span class="all">33</span>
+						</div>
+					</div>
+					<div class="groups-item">
+						<div class="groups-item__title">1пк1</div>
+						<div class="groups-item__count">
+							<span class="cur">33</span> /
+							<span class="all">33</span>
+						</div>
+					</div>
+					<div class="groups-item">
+						<div class="groups-item__title">1пк1</div>
+						<div class="groups-item__count">
+							<span class="cur">33</span> /
+							<span class="all">33</span>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
