--- a/public/index.html
+++ b/public/index.html
@@ -296,7 +296,7 @@
 
 				<div class="groups__wrapper">
 					<div class="groups__course active" data-course="1">
-						<div class="groups-item">
+						<div class="groups-item checked">
 							<div class="groups-item__title">1пк1</div>
 							<div class="groups-item__count">
 								<span class="cur">33</span> /
@@ -310,7 +310,7 @@
 								<span class="all">33</span>
 							</div>
 						</div>
-						<div class="groups-item">
+						<div class="groups-item checked">
 							<div class="groups-item__title">1пк1</div>
 							<div class="groups-item__count">
 								<span class="cur">33</span> /
@@ -483,6 +483,43 @@
 		</div>
 	</section>
 
+	<section class="history-group" data-page="history-group">
+		<div class="container">
+			<div class="breadcrumbs">
+				<div class="breadcrumbs__item"><span data-page-target="intro">Главная</span></div>
+				<div class="breadcrumbs__item"><span data-page-target="history">История</span></div>
+				<div class="breadcrumbs__item">1пк1</div>
+			</div>
+			<div class="write-group__count"><span class="cur">34</span> / <span class="all">34</span></div>
+			<div class="write-group__wrapper">
+				<div class="write-group-item">
+					<div class="write-group-item__name">Брюхов Виктор</div>
+				</div>
+				<div class="write-group-item">
+					<div class="write-group-item__name">Брюхов Виктор</div>
+				</div>
+				<div class="write-group-item">
+					<div class="write-group-item__name">Брюхов Виктор</div>
+				</div>
+				<div class="write-group-item">
+					<div class="write-group-item__name">Брюхов Виктор</div>
+				</div>
+				<div class="write-group-item">
+					<div class="write-group-item__name">Брюхов Виктор</div>
+				</div>
+				<div class="write-group-item">
+					<div class="write-group-item__name">Брюхов Виктор</div>
+				</div>
+				<div class="write-group-item">
+					<div class="write-group-item__name">Брюхов Виктор</div>
+				</div>
+				<div class="write-group-item">
+					<div class="write-group-item__name">Брюхов Виктор</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<div class="calendar">
 		<div class="calendar__wrapper">
 			<div class="calendar__selects">
@@ -490,7 +527,7 @@
 					<div class="select-with-image__field">
 						<img class="select-with-image__arrow-icon" src="img/select-arrow.svg" alt="">
 					</div>
-				
+
 					<div class="select-with-image__list">
 						<div class="select-with-image__btn">2023</div>
 					</div>
