--- a/public/index.html
+++ b/public/index.html
@@ -238,10 +238,24 @@
 				<div class="breadcrumbs__item">1пк1</div>
 			</div>
 			<div class="write-group__header">
-				<div class="write-group__count"><span class="cur">34</span> / <span class="all">34</span></div>
+				<div class="write-group__count"><span class="cur"><input max="34" min="0" type="number" value="34"
+							inputmode="numeric" oninput="{
+								let value = this.value
+
+								if(Number(value) > Number(this.max)){ 
+									value = this.value.slice(0, -1)
+
+									if (value.slice(0, -1) > Number(this.max)) {
+										value = this.value.slice(0, -1)
+									}
+									this.value = value
+									return false;
+								}
+								}"></span>
+					/ <span class="all">34</span></div>
 				<button class="write-group__save-btn btn">Применить</button>
 			</div>
-			<div class="write-group__wrapper">
+			<div class="write-group__wrapper dn">
 				<div class="write-group-item">
 					<div class="write-group-item__name">Брюхов Виктор</div>
 					<div class="write-group-item__cb">
@@ -293,8 +307,135 @@
 					<button class="groups-tabs__btn" data-course-target="3">3</button>
 					<button class="groups-tabs__btn" data-course-target="4">4</button>
 				</div>
-
 				<div class="groups__wrapper">
+					<table class="groups-table">
+						<thead>
+							<tr>
+								<th rowspan="2">Группа <br> <span class="curator">Куратор</span></th>
+								<th rowspan="2">По списку</th>
+								<th colspan="2">Отсутствуют</th>
+							</tr>
+							<tr>
+								<th>Время</th>
+								<th>Кол-во</th>
+							</tr>
+						</thead>
+						<tbody class="groups__course active" data-course="1">
+							<tr>
+								<td rowspan="2">
+									<span class="group">1пк1</span> <br>
+									<span class="curator">Илюсизова А.А.</span>
+								</td>
+								<td rowspan="2">34</td>
+								<td>-</td>
+								<td>-</td>
+							</tr>
+							<tr>
+								<td>-</td>
+								<td>-</td>
+							</tr>
+						</tbody>
+						<tbody class="groups__course active" data-course="2">
+							<tr>
+								<td rowspan="2">
+									<span class="group">2пк1</span> <br>
+									<span class="curator">Илюсизова А.А.</span>
+								</td>
+								<td rowspan="2">34</td>
+								<td>-</td>
+								<td>-</td>
+							</tr>
+							<tr>
+								<td>-</td>
+								<td>-</td>
+							</tr>
+						</tbody>
+						<tbody class="groups__course active" data-course="3">
+							<tr>
+								<td rowspan="2">
+									<span class="group">3пк1</span> <br>
+									<span class="curator">Илюсизова А.А.</span>
+								</td>
+								<td rowspan="2">34</td>
+								<td>-</td>
+								<td>-</td>
+							</tr>
+							<tr>
+								<td>-</td>
+								<td>-</td>
+							</tr>
+						</tbody>
+						<tbody class="groups__course active" data-course="4">
+							<tr>
+								<td rowspan="2">
+									<span class="group">4пк1</span> <br>
+									<span class="curator">Илюсизова А.А.</span>
+								</td>
+								<td rowspan="2">34</td>
+								<td>-</td>
+								<td>-</td>
+							</tr>
+							<tr>
+								<td>-</td>
+								<td>-</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+				<!-- <div class="groups__wrapper">
+					<div class="groups__course active" data-course="1">
+						<div class="groups-item checked">
+							<div class="groups-item__title">1пк1</div>
+							<div class="groups-item__count">
+								<span class="cur">33</span> /
+								<span class="all">33</span>
+							</div>
+						</div>
+						<div class="groups-item">
+							<div class="groups-item__title">1пк1</div>
+							<div class="groups-item__count">
+								<span class="cur">33</span> /
+								<span class="all">33</span>
+							</div>
+						</div>
+						<div class="groups-item checked">
+							<div class="groups-item__title">1пк1</div>
+							<div class="groups-item__count">
+								<span class="cur">33</span> /
+								<span class="all">33</span>
+							</div>
+						</div>
+						<div class="groups-item">
+							<div class="groups-item__title">1пк1</div>
+							<div class="groups-item__count">
+								<span class="cur">33</span> /
+								<span class="all">33</span>
+							</div>
+						</div>
+						<div class="groups-item">
+							<div class="groups-item__title">1пк1</div>
+							<div class="groups-item__count">
+								<span class="cur">33</span> /
+								<span class="all">33</span>
+							</div>
+						</div>
+						<div class="groups-item">
+							<div class="groups-item__title">1пк1</div>
+							<div class="groups-item__count">
+								<span class="cur">33</span> /
+								<span class="all">33</span>
+							</div>
+						</div>
+						<div class="groups-item">
+							<div class="groups-item__title">1пк1</div>
+							<div class="groups-item__count">
+								<span class="cur">33</span> /
+								<span class="all">33</span>
+							</div>
+						</div>
+					</div>
+				</div> -->
+				<!-- <div class="groups__wrapper">
 					<div class="groups__course active" data-course="1">
 						<div class="groups-item checked">
 							<div class="groups-item__title">1пк1</div>
@@ -478,7 +619,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</section>
