--- a/public/index.html
+++ b/public/index.html
@@ -43,187 +43,12 @@
 
 				<div class="groups__wrapper">
 					<div class="groups__course active" data-course="1">
-						<div class="groups-item">
-							<div class="groups-item__title">1пк1</div>
-							<div class="groups-item__count">
-								<span class="cur">33</span> /
-								<span class="all">33</span>
-							</div>
-						</div>
-						<div class="groups-item">
-							<div class="groups-item__title">1пк1</div>
-							<div class="groups-item__count">
-								<span class="cur">33</span> /
-								<span class="all">33</span>
-							</div>
-						</div>
-						<div class="groups-item">
-							<div class="groups-item__title">1пк1</div>
-							<div class="groups-item__count">
-								<span class="cur">33</span> /
-								<span class="all">33</span>
-							</div>
-						</div>
-						<div class="groups-item">
-							<div class="groups-item__title">1пк1</div>
-							<div class="groups-item__count">
-								<span class="cur">33</span> /
-								<span class="all">33</span>
-							</div>
-						</div>
-						<div class="groups-item">
-							<div class="groups-item__title">1пк1</div>
-							<div class="groups-item__count">
-								<span class="cur">33</span> /
-								<span class="all">33</span>
-							</div>
-						</div>
-						<div class="groups-item">
-							<div class="groups-item__title">1пк1</div>
-							<div class="groups-item__count">
-								<span class="cur">33</span> /
-								<span class="all">33</span>
-							</div>
-						</div>
-						<div class="groups-item">
-							<div class="groups-item__title">1пк1</div>
-							<div class="groups-item__count">
-								<span class="cur">33</span> /
-								<span class="all">33</span>
-							</div>
-						</div>
 					</div>
 					<div class="groups__course active" data-course="2">
-						<div class="groups-item">
-							<div class="groups-item__title">2пк1</div>
-							<div class="groups-item__count">
-								<span class="cur">33</span> /
-								<span class="all">33</span>
-							</div>
-						</div>
-						<div class="groups-item">
-							<div class="groups-item__title">2пк1</div>
-							<div class="groups-item__count">
-								<span class="cur">33</span> /
-								<span class="all">33</span>
-							</div>
-						</div>
-						<div class="groups-item">
-							<div class="groups-item__title">2пк1</div>
-							<div class="groups-item__count">
-								<span class="cur">33</span> /
-								<span class="all">33</span>
-							</div>
-						</div>
-						<div class="groups-item">
-							<div class="groups-item__title">2пк1</div>
-							<div class="groups-item__count">
-								<span class="cur">33</span> /
-								<span class="all">33</span>
-							</div>
-						</div>
-						<div class="groups-item">
-							<div class="groups-item__title">2пк1</div>
-							<div class="groups-item__count">
-								<span class="cur">33</span> /
-								<span class="all">33</span>
-							</div>
-						</div>
-						<div class="groups-item">
-							<div class="groups-item__title">2пк1</div>
-							<div class="groups-item__count">
-								<span class="cur">33</span> /
-								<span class="all">33</span>
-							</div>
-						</div>
-						<div class="groups-item">
-							<div class="groups-item__title">2пк1</div>
-							<div class="groups-item__count">
-								<span class="cur">33</span> /
-								<span class="all">33</span>
-							</div>
-						</div>
 					</div>
 					<div class="groups__course active" data-course="3">
-						<div class="groups-item">
-							<div class="groups-item__title">3пк1</div>
-							<div class="groups-item__count">
-								<span class="cur">33</span> /
-								<span class="all">33</span>
-							</div>
-						</div>
-						<div class="groups-item">
-							<div class="groups-item__title">3пк1</div>
-							<div class="groups-item__count">
-								<span class="cur">33</span> /
-								<span class="all">33</span>
-							</div>
-						</div>
-						<div class="groups-item">
-							<div class="groups-item__title">3пк1</div>
-							<div class="groups-item__count">
-								<span class="cur">33</span> /
-								<span class="all">33</span>
-							</div>
-						</div>
-						<div class="groups-item">
-							<div class="groups-item__title">3пк1</div>
-							<div class="groups-item__count">
-								<span class="cur">33</span> /
-								<span class="all">33</span>
-							</div>
-						</div>
-						<div class="groups-item">
-							<div class="groups-item__title">3пк1</div>
-							<div class="groups-item__count">
-								<span class="cur">33</span> /
-								<span class="all">33</span>
-							</div>
-						</div>
-						<div class="groups-item">
-							<div class="groups-item__title">3пк1</div>
-							<div class="groups-item__count">
-								<span class="cur">33</span> /
-								<span class="all">33</span>
-							</div>
-						</div>
-						<div class="groups-item">
-							<div class="groups-item__title">3пк1</div>
-							<div class="groups-item__count">
-								<span class="cur">33</span> /
-								<span class="all">33</span>
-							</div>
-						</div>
 					</div>
 					<div class="groups__course active" data-course="4">
-						<div class="groups-item">
-							<div class="groups-item__title">4пк1</div>
-							<div class="groups-item__count">
-								<span class="cur">33</span> /
-								<span class="all">33</span>
-							</div>
-						</div>
-						<div class="groups-item">
-							<div class="groups-item__title">4пк1</div>
-							<div class="groups-item__count">
-								<span class="cur">33</span> /
-								<span class="all">33</span>
-							</div>
-						</div>
-						<div class="groups-item">
-							<div class="groups-item__title">4пк1</div>
-							<div class="groups-item__count">
-								<span class="cur">33</span> /
-								<span class="all">33</span>
-							</div>
-						</div>
-						<div class="groups-item">
-							<div class="groups-item__title">4пк1</div>
-							<div class="groups-item__count">
-								<span class="cur">33</span> /
-								<span class="all">33</span>
-							</div>
-						</div>
 					</div>
 				</div>
 			</div>
@@ -247,7 +72,12 @@
 								this.value = value
 								return false;
 								}"
-						onfocus="this.select()"></span>
+						onfocus="this.select()"
+						onfocusout="{
+							if (this.value === '') {
+								this.value = 0
+							}
+						}"></span>
 					/ <span class="all">34</span></div>
 				<button class="write-group__save-btn btn">Применить</button>
 			</div>
@@ -317,64 +147,12 @@
 							</tr>
 						</thead>
 						<tbody class="groups__course active" data-course="1">
-							<tr>
-								<td rowspan="2">
-									<span class="group">1пк1</span> <br>
-									<span class="curator">Илюсизова А.А.</span>
-								</td>
-								<td rowspan="2">34</td>
-								<td>-</td>
-								<td>-</td>
-							</tr>
-							<tr>
-								<td>-</td>
-								<td>-</td>
-							</tr>
 						</tbody>
 						<tbody class="groups__course active" data-course="2">
-							<tr>
-								<td rowspan="2">
-									<span class="group">2пк1</span> <br>
-									<span class="curator">Илюсизова А.А.</span>
-								</td>
-								<td rowspan="2">34</td>
-								<td>-</td>
-								<td>-</td>
-							</tr>
-							<tr>
-								<td>-</td>
-								<td>-</td>
-							</tr>
 						</tbody>
 						<tbody class="groups__course active" data-course="3">
-							<tr>
-								<td rowspan="2">
-									<span class="group">3пк1</span> <br>
-									<span class="curator">Илюсизова А.А.</span>
-								</td>
-								<td rowspan="2">34</td>
-								<td>-</td>
-								<td>-</td>
-							</tr>
-							<tr>
-								<td>-</td>
-								<td>-</td>
-							</tr>
 						</tbody>
 						<tbody class="groups__course active" data-course="4">
-							<tr>
-								<td rowspan="2">
-									<span class="group">4пк1</span> <br>
-									<span class="curator">Илюсизова А.А.</span>
-								</td>
-								<td rowspan="2">34</td>
-								<td>-</td>
-								<td>-</td>
-							</tr>
-							<tr>
-								<td>-</td>
-								<td>-</td>
-							</tr>
 						</tbody>
 					</table>
 				</div>
