--- a/public/index.html
+++ b/public/index.html
@@ -438,7 +438,7 @@
 	<div class="calendar">
 		<div class="calendar__wrapper">
 			<div class="calendar__selects">
-				<div class="select-with-image calendar-select">
+				<div class="select-with-image calendar-select calendar-year">
 					<div class="select-with-image__field">
 						<img class="select-with-image__arrow-icon" src="img/select-arrow.svg" alt="">
 					</div>
@@ -447,24 +447,24 @@
 						<div class="select-with-image__btn">2023</div>
 					</div>
 				</div>
-				<div class="select-with-image calendar-select">
+				<div class="select-with-image calendar-select calendar-month">
 					<div class="select-with-image__field">
 						<img class="select-with-image__arrow-icon" src="img/select-arrow.svg" alt="">
 					</div>
 
 					<div class="select-with-image__list">
-						<div class="select-with-image__btn">Январь</div>
-						<div class="select-with-image__btn">Февраль</div>
-						<div class="select-with-image__btn">Март</div>
-						<div class="select-with-image__btn">Апрель</div>
-						<div class="select-with-image__btn">Май</div>
-						<div class="select-with-image__btn">Июнь</div>
-						<div class="select-with-image__btn">Июль</div>
-						<div class="select-with-image__btn">Август</div>
-						<div class="select-with-image__btn">Сентябрь</div>
-						<div class="select-with-image__btn">Октябрь</div>
-						<div class="select-with-image__btn">Ноябрь</div>
-						<div class="select-with-image__btn">Декабрь</div>
+						<div class="select-with-image__btn" data-month="01">Январь</div>
+						<div class="select-with-image__btn" data-month="02">Февраль</div>
+						<div class="select-with-image__btn" data-month="03">Март</div>
+						<div class="select-with-image__btn" data-month="04">Апрель</div>
+						<div class="select-with-image__btn" data-month="05">Май</div>
+						<div class="select-with-image__btn" data-month="06">Июнь</div>
+						<div class="select-with-image__btn" data-month="07">Июль</div>
+						<div class="select-with-image__btn" data-month="08">Август</div>
+						<div class="select-with-image__btn" data-month="09">Сентябрь</div>
+						<div class="select-with-image__btn" data-month="10">Октябрь</div>
+						<div class="select-with-image__btn" data-month="11">Ноябрь</div>
+						<div class="select-with-image__btn" data-month="12">Декабрь</div>
 					</div>
 				</div>
 			</div>
@@ -492,7 +492,7 @@
 							<td>3</td>
 						</tr>
 						<tr>
-							<td class="cur">4</td>
+							<td class="cur active">4</td>
 							<td>5</td>
 							<td>6</td>
 							<td>7</td>
