--- a/public/index.html
+++ b/public/index.html
@@ -441,6 +441,7 @@
 				<div class="select-with-image calendar-select calendar-year">
 					<div class="select-with-image__field">
 						<img class="select-with-image__arrow-icon" src="img/select-arrow.svg" alt="">
+						<div class="select-with-image__content"></div>
 					</div>
 
 					<div class="select-with-image__list">
@@ -450,6 +451,7 @@
 				<div class="select-with-image calendar-select calendar-month">
 					<div class="select-with-image__field">
 						<img class="select-with-image__arrow-icon" src="img/select-arrow.svg" alt="">
+						<div class="select-with-image__content"></div>
 					</div>
 
 					<div class="select-with-image__list">
