--- a/public/index.html
+++ b/public/index.html
@@ -446,6 +446,7 @@
 
 					<div class="select-with-image__list">
 						<div class="select-with-image__btn">2023</div>
+						<div class="select-with-image__btn">2024</div>
 					</div>
 				</div>
 				<div class="select-with-image calendar-select calendar-month">
@@ -484,7 +485,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr>
+						<!-- <tr>
 							<td class="extra">28</td>
 							<td class="extra">29</td>
 							<td class="extra">30</td>
@@ -528,7 +529,7 @@
 							<td>29</td>
 							<td>30</td>
 							<td class="extra">1</td>
-						</tr>
+						</tr> -->
 					</tbody>
 				</table>
 			</div>
